Unify newsletter editor variable naming
[MAILPOET-2487]

--- a/assets/css/src/components/_newsletter-templates.scss
+++ b/assets/css/src/components/_newsletter-templates.scss
@@ -1,8 +1,8 @@
 .mailpoet_template_iframe {
   left: 0;
-  max-width: $newsletter-width;
+  max-width: $editor-width;
   position: absolute;
   top: 0;
-  width: $newsletter-width;
+  width: $editor-width;
   z-index: -9999;
 }
