--- a/assets/css/src/components/_stats.scss
+++ b/assets/css/src/components/_stats.scss
@@ -30,7 +30,7 @@
 }
 
 .mailpoet_stats_premium_banner {
-  background-color: $info-message-background-color;
+  background-color: #fed2bf;
   padding: 10px;
   text-align: center;
 }
