--- a/assets/css/src/components/newsletter-editor/components/_save.scss
+++ b/assets/css/src/components/newsletter-editor/components/_save.scss
@@ -102,7 +102,7 @@
   color: $color-editor-warning;
   margin-top: 10px;
   text-align: right;
-  width: $newsletter-editor-sidebar-width;
+  width: $editor-sidebar-width;
 }
 
 .mailpoet_save_dropdown_down {
