--- a/assets/css/src/components/newsletter-editor/content-blocks/_container.scss
+++ b/assets/css/src/components/newsletter-editor/content-blocks/_container.scss
@@ -31,7 +31,7 @@
 
   > .mailpoet_container_block {
     border: 0;
-    width: $newsletter-width;
+    width: $editor-width;
   }
 
   > .mailpoet_container_block > .mailpoet_container > .mailpoet_container_block {
@@ -42,7 +42,7 @@
   .mailpoet_container_horizontal > .mailpoet_container_block {
     padding-bottom: 0;
     padding-top: 0;
-    width: $column-margin + $one-column-width + $column-margin;
+    width: $editor-column-margin + $editor-column-width-one + $editor-column-margin;
   }
 
   > .mailpoet_container_block > .mailpoet_container > .mailpoet_container_block > .mailpoet_container_horizontal,
@@ -52,23 +52,23 @@
   > .mailpoet_container_block > .mailpoet_container .mailpoet_automated_latest_content_block_products .mailpoet_container_horizontal {
     > .mailpoet_block:first-child:nth-last-child(2),
     > .mailpoet_block:first-child:nth-last-child(2) ~ .mailpoet_block {
-      width: $column-margin + $two-column-width + $column-margin;
+      width: $editor-column-margin + $editor-column-width-two + $editor-column-margin;
     }
 
     > .mailpoet_block:first-child:nth-last-child(3),
     > .mailpoet_block:first-child:nth-last-child(3) ~ .mailpoet_block {
-      width: $column-margin + $three-column-width + $column-margin;
+      width: $editor-column-margin + $editor-column-width-three + $editor-column-margin;
     }
   }
 
   > .mailpoet_container_block > .mailpoet_container > .mailpoet_container_block > .mailpoet_container_horizontal.mailpoet_irregular_width_contents_container.column_layout_1_2 > .mailpoet_container_block:first-child,
   > .mailpoet_container_block > .mailpoet_container > .mailpoet_container_block > .mailpoet_container_horizontal.mailpoet_irregular_width_contents_container.column_layout_2_1 > .mailpoet_container_block:nth-child(2) {
-    width: $column-margin + $three-column-width + $column-margin;
+    width: $editor-column-margin + $editor-column-width-three + $editor-column-margin;
   }
 
   > .mailpoet_container_block > .mailpoet_container > .mailpoet_container_block > .mailpoet_container_horizontal.mailpoet_irregular_width_contents_container.column_layout_2_1 > .mailpoet_container_block:first-child,
   > .mailpoet_container_block > .mailpoet_container > .mailpoet_container_block > .mailpoet_container_horizontal.mailpoet_irregular_width_contents_container.column_layout_1_2 > .mailpoet_container_block:nth-child(2) {
-    width: $column-margin + $two-column-wider-column-width + $column-margin;
+    width: $editor-column-margin + $editor-column-width-two-wider + $editor-column-margin;
   }
 }
 
