--- a/assets/css/src/mailpoet-plugin.scss
+++ b/assets/css/src/mailpoet-plugin.scss
@@ -7,6 +7,7 @@
 @import 'settings/modal';
 @import 'settings/newsletter';
 @import 'settings/progress';
+@import 'settings/range';
 
 @import 'components/mixins';
 @import '../../../node_modules/select2/dist/css/select2';
