--- a/assets/css/src/settings/_editor.scss
+++ b/assets/css/src/settings/_editor.scss
@@ -1,103 +1,45 @@
-$newsletter-width: 660px;
+$editor-line-height: 1.6em;
+$editor-width: 660px;
 
-$text-line-height: 1.6em;
-$sidebar-text-size: 13px;
+$editor-column-margin: 20px;
+$editor-column-width-one: $editor-width - (2 * $editor-column-margin);
+$editor-column-width-two: $editor-width / 2 - (2 * $editor-column-margin);
+$editor-column-width-two-wider: (($editor-width / 3) - $editor-column-margin) * 2;
+$editor-column-width-three: $editor-width / 3 - (2 * $editor-column-margin);
 
-$info-message-background-color: #fed2bf;
+$editor-divider-background-color: #daebf2;
+$editor-divider-border-color: #adadad;
+$editor-divider-border-color-hover: $color-primary;
 
-$link-color: $color-primary-button;
+$editor-dnd-drag-zindex: 2;
+$editor-dnd-drop-size: 2px;
+$editor-dnd-drop-zindex: 1;
 
-$select-border-color: $color-editor-border-content;
-$select-text-color: $color-primary-text;
+$editor-resize-color: $color-editor-background-content;
+$editor-resize-handle-color: $color-white;
+$editor-resize-handle-zindex: 2;
 
-$button-default-border-color: $color-editor-border-structure;
-$button-default-background-color: $color-primary-background;
-$button-default-text-color: $color-primary-inactive;
+$editor-sidebar-background: $color-primary-background;
+$editor-sidebar-color: $color-primary-text;
+$editor-sidebar-font-size: 13px;
+$editor-sidebar-width: 330px;
 
-$button-primary-border-color: $color-primary;
-$button-primary-background-color: $color-primary-button;
-$button-primary-hover-background-color: $color-primary-highlight;
-$button-primary-text-color: $color-white;
+$editor-social-icon-background-color: #daebf2;
+$editor-social-icon-border-color: #adadad;
+$editor-social-icon-border-color-hover: $color-primary;
+$editor-social-icon-width: 32px;
 
-$range-track-background-color: $color-white;
-$range-track-border-color: $color-editor-border-structure;
-$range-track-height: 12px;
-$range-thumb-background-color: $color-primary-inactive;
-$range-thumb-border-color: #333;
-$range-thumb-width: 13px;
-$range-thumb-height: 26px;
-$range-border-radius: 3px;
-$range-thumb-hover-background-color: $color-primary;
+$editor-tool-size: 14px;
+$editor-tool-size-with-padding: 24px;
+$editor-tool-column-size: 15px;
+$editor-tool-column-size-with-padding: 27px;
+$editor-tool-social-color: #333;
+$editor-tool-social-hover: #bbb;
+$editor-tool-social-width: 16px;
 
-$newsletter-editor-sidebar-width: 330px;
+$editor-widget-icon-color-hover: $color-primary;
+$editor-widget-icon-color: darken($color-primary-background, 31.5%);
+$editor-widget-icon-size: 30px;
+$editor-widget-shadow-color: darken($color-primary-background, 13%);
+$editor-widget-size: 70px;
 
-
-//////// COMPONENTS
-
-// Block tools
-$tool-inactive-color: #333;
-$tool-inactive-secondary-color: #fff;
-$tool-hover-color: #bbb;
-$tool-hover-secondary-color: #fff;
-$tool-active-color: #d2d2d4;
-$tool-active-secondary-color: #fff;
-
-$content-icon-size: 14px;
-$content-icon-size-with-padding: 24px;
-$column-icon-size: 15px;
-$column-icon-size-with-padding: 27px;
-
-// Drag N Drop
-$drop-active-color: $color-primary;
-
-$marker-width: 2px;
-$marker-z-index: 1;
-
-$draggable-widget-z-index: 2;
-
-// Resize
-$resize-active-color: $color-editor-background-content;
-$resize-handle-font-color: $color-white;
-$resize-handle-z-index: 2;
-
-// Sidebar
-$sidebar-background-color: $color-primary-background;
-$sidebar-active-heading-color: $color-primary;
-$sidebar-inactive-heading-color: $color-primary-inactive;
-$sidebar-text-color: $color-primary-text;
-
-$widget-width: 70px;
-$widget-background-color: $color-white;
-$widget-shadow-color: darken($color-primary-background, 13%);
-$widget-icon-color: darken($color-primary-background, 31.5%);
-$widget-icon-hover-color: $color-primary;
-$widget-icon-width: 30px;
-
-// Sidepanel
-$sidepanel-active-heading-color: $color-primary;
-
-
-////// CONTENT BLOCKS
-
-// Base
-$block-text-line-height: $text-line-height;
-
-// Container
-$column-margin: 20px;
-$one-column-width: $newsletter-width - (2 * $column-margin);
-$two-column-width: $newsletter-width / 2 - (2 * $column-margin);
-$three-column-width: $newsletter-width / 3 - (2 * $column-margin);
-$two-column-wider-column-width: (($newsletter-width / 3) - $column-margin) * 2;
-
-// Divider
-$active-divider-border-color: #adadad;
-$active-divider-background-color: #daebf2;
-$divider-hover-border-color: $color-primary;
-
-// Social
-$social-icon-width: 32px;
-$active-social-icon-set-border-color: #adadad;
-$active-social-icon-set-background-color: #daebf2;
-$social-icon-set-hover-border-color: $color-primary;
-
-$tool-width: 16px;
