Add subscribe in comments and registration
[MAILPOET-2677]

--- a/assets/css/src/settings.scss
+++ b/assets/css/src/settings.scss
@@ -30,6 +30,10 @@
   margin: 2px;
 }
 
+.mailpoet-settings-inputs input.regular-text {
+  width: 25.5em;
+}
+
 .mailpoet-settings-inputs .regular-text p {
   font-size: 14px;
 }
