--- a/views/settings.html
+++ b/views/settings.html
@@ -41,6 +41,13 @@
     'yourName': __('Your name'),
     'replyTo': __('Reply-to'),
 
+    'subscribeInCommentsTitle': __('Subscribe in comments'),
+    'subscribeInCommentsDescription': __('Visitors that comment on a post can subscribe to your list via a checkbox.'),
+    'subscribeInRegistrationTitle': __('Subscribe in registration form'),
+    'subscribeInRegistrationDescription': __('Allow users who register as a WordPress user on your website to subscribe to a MailPoet list (in addition to the "WordPress Users" list). This also enables WordPress users to receive confirmation emails (if sign-up confirmation is enabled).'),
+    'usersWillBeSubscribedTo': __('Users will be subscribed to these lists:'),
+    'yesAddMe': __('Yes, add me to your mailing list'),
+    'chooseList': __('Choose a list'),
 
     'reinstallConfirmation': __('Are you sure? All of your MailPoet data will be permanently erased (newsletters, statistics, subscribers, etc.).'),
     'announcementHeader': __('Get notified when someone subscribes'),
