--- a/assets/css/src/components/_legacy-modal.scss
+++ b/assets/css/src/components/_legacy-modal.scss
@@ -193,7 +193,7 @@ body.mailpoet_modal_opened {
   text-align: right;
 }
 
-@media screen and (max-width: 782px) {
+@include breakpoint-max-width(782px) {
   .mailpoet_modal_overlay {
     padding: $legacy-modal-popup-margin-mobile;
   }
