--- a/assets/css/src/components/_modal.scss
+++ b/assets/css/src/components/_modal.scss
@@ -30,7 +30,7 @@
 
   // Centered on desktops
 
-  @media screen and (min-width: 600px) {
+  @include breakpoint-min-width(600px) {
     // Animate the modal frame/contents appearing on the page.
     animation: mailpoet-modal-appear-animation .1s ease-out;
     animation-duration: 100ms;
