--- a/assets/css/src/components/_premium-page.scss
+++ b/assets/css/src/components/_premium-page.scss
@@ -5,7 +5,7 @@
   margin: 25px auto 0;
   padding: 0 150px;
 
-  @media screen and (max-width: 1500px) {
+  @include breakpoint-max-width(1500px) {
     padding: 0;
   }
 
@@ -36,27 +36,27 @@
     flex-direction: row;
     margin-bottom: 3em;
 
-    @media screen and (max-width: 500px) {
+    @include breakpoint-max-width(500px) {
       flex-wrap: wrap;
     }
 
     img {
       margin-right: 100px;
 
-      @media screen and (max-width: 1100px) {
+      @include breakpoint-max-width(1100px) {
         height: 50%;
         margin-right: 75px;
         width: 50%;
       }
 
-      @media screen and (max-width: 500px) {
+      @include breakpoint-max-width(500px) {
         height: 40%;
         margin: 0 auto;
         width: 40%;
       }
     }
 
-    @media screen and (max-width: 500px) {
+    @include breakpoint-max-width(500px) {
       .mailpoet-premium-page-intro-link-wrap {
         text-align: center;
       }
@@ -101,11 +101,11 @@
     .mailpoet-premium-page-feature {
       width: 29%;
 
-      @media screen and (max-width: 640px) {
+      @include breakpoint-max-width(640px) {
         width: 49%;
       }
 
-      @media screen and (max-width: 500px) {
+      @include breakpoint-max-width(500px) {
         width: 100%;
       }
 
@@ -129,12 +129,12 @@
       justify-content: space-between;
       margin: 0 20px;
 
-      @media screen and (max-width: 500px) {
+      @include breakpoint-max-width(500px) {
         width: 100%;
       }
     }
 
-    @media screen and (max-width: 880px) {
+    @include breakpoint-max-width(880px) {
       display: block;
 
       > div { display: block; }
@@ -155,7 +155,7 @@
     flex-grow: 100;
   }
 
-  @media screen and (max-width: 1100px) {
+  @include breakpoint-max-width(1100px) {
     h2 {
       font-size: 2em; // The text WooCommerce is too long and so on smaller displays it overflows. This helps.
     }
