--- a/assets/css/src/components/_settings.scss
+++ b/assets/css/src/components/_settings.scss
@@ -145,7 +145,7 @@
     margin-top: 10px;
   }
 
-  @media screen and (max-width: 782px) {
+  @include breakpoint-max-width(782px) {
     .form-table th {
       width: auto;
     }
