--- a/assets/css/src/mailpoet-public.scss
+++ b/assets/css/src/mailpoet-public.scss
@@ -1,5 +1,6 @@
 // 1. Tools
 // Default mixins and functions. Not producing any CSS.
+@import 'mixins/breakpoints';
 @import 'mixins/clearfix';
 
 @import 'components/parsley';
