--- a/assets/css/src/components/_common.scss
+++ b/assets/css/src/components/_common.scss
@@ -60,7 +60,7 @@ textarea.regular-text {
   width: 25em !important;
 }
 
-@media screen and (max-width: 782px) {
+@include breakpoint-max-width(782px) {
   .select2-container {
     width: 100% !important;
   }
