--- a/assets/css/src/components/_listing.scss
+++ b/assets/css/src/components/_listing.scss
@@ -38,7 +38,7 @@
     }
   }
 
-  @media screen and (max-width: 782px) {
+  @include breakpoint-max-width(782px) {
     thead th.column-primary,
     tfoot th.column-primary {
       width: 100% !important;
