--- a/assets/css/src/components/_stats.scss
+++ b/assets/css/src/components/_stats.scss
@@ -35,7 +35,7 @@
   text-align: center;
 }
 
-@media screen and (max-width: 520px) {
+@include breakpoint-max-width(520px) {
   .mailpoet_stat_info {
     display: none;
   }
