Separate global wordpress styles components
[MAILPOET-2487]

--- a/assets/css/src/mailpoet-admin.scss
+++ b/assets/css/src/mailpoet-admin.scss
@@ -1,2 +1,4 @@
-@import 'components/globals';
-@import 'components/plugins/members';
+// Utilities
+// Helpers and overrides.
+@import 'components-admin/menu';
+@import 'components-admin/3rd-party-plugins/members';
