Separate newsletter editor CSS file
[MAILPOET-2487]

--- a/assets/css/src/components-editor/_layout.scss
+++ b/assets/css/src/components-editor/_layout.scss
@@ -39,7 +39,7 @@
 
 .mailpoet_newsletter_wrapper {
   margin: auto;
-  max-width: $editor-width;
+  max-width: $grid-editor-width;
   position: relative;
-  width: $editor-width;
+  width: $grid-editor-width;
 }
