--- a/assets/css/src/components-editor/components/_drag-and-drop.scss
+++ b/assets/css/src/components-editor/components/_drag-and-drop.scss
@@ -41,7 +41,7 @@
 
 .mailpoet_block.mailpoet_droppable_active {
   border: 1px dashed $color-primary !important;
-  width: $editor-width;
+  width: $grid-editor-width;
 
   .mailpoet_tools {
     display: none !important;
