--- a/assets/css/src/components-editor/content-blocks/_divider.scss
+++ b/assets/css/src/components-editor/content-blocks/_divider.scss
@@ -12,7 +12,7 @@
   border: 1px solid transparent;
   display: block;
   margin: auto;
-  max-width: $editor-width;
+  max-width: $grid-editor-width;
   padding: 10px 0;
   width: 100%;
 
