--- a/assets/css/src/mailpoet-public.scss
+++ b/assets/css/src/mailpoet-public.scss
@@ -1,4 +1,4 @@
-// 1. Tools
+// Tools
 // Default mixins and functions. Not producing any CSS.
 @import 'mixins/breakpoints';
 @import 'mixins/clearfix';
