--- a/views/newsletter/editor.html
+++ b/views/newsletter/editor.html
@@ -391,10 +391,12 @@
   }) %>
 <% endblock %>
 
+<% block after_css %>
+  <%= stylesheet('mailpoet-editor.css') %>
+<% endblock %>
+
 <% block after_javascript %>
-  <%= javascript(
-    'newsletter_editor.js'
-  ) %>
+  <%= javascript('newsletter_editor.js') %>
 
   <%= do_action('mailpoet_newsletter_editor_after_javascript') %>
 
