--- a/assets/css/src/components-editor/content-blocks/_container.scss
+++ b/assets/css/src/components-editor/content-blocks/_container.scss
@@ -31,7 +31,7 @@
 
   > .mailpoet_container_block {
     border: 0;
-    width: $editor-width;
+    width: $grid-editor-width;
   }
 
   > .mailpoet_container_block > .mailpoet_container > .mailpoet_container_block {
