--- a/views/settings.html
+++ b/views/settings.html
@@ -13,6 +13,7 @@
       var mailpoet_is_new_user = <%= json_encode(is_new_user == true) %>;
       var mailpoet_settings = <%= json_encode(settings) %>;
       var mailpoet_segments = <%= json_encode(segments) %>;
+      var mailpoet_pages = <%= json_encode(pages) %>;
     <% endautoescape %>
     var mailpoet_beacon_articles = [
       '57f71d49c697911f2d323486',
@@ -48,6 +49,15 @@
     'usersWillBeSubscribedTo': __('Users will be subscribed to these lists:'),
     'yesAddMe': __('Yes, add me to your mailing list'),
     'chooseList': __('Choose a list'),
+
+    'manageSubTitle': __('Manage Subscription page'),
+    'manageSubDescription1': __('When your subscribers click the "Manage your subscription" link, they will be directed to this page.'),
+    'manageSubDescription2': __('If you want to use a custom Subscription page, simply paste this shortcode on to a WordPress page: [mailpoet_manage_subscription]'),
+    'previewPage': __('Preview page'),
+    'preview': __('Preview'),
+    'subscribersCanChooseFrom': __('Subscribers can choose from these lists:'),
+    'leaveEmptyToDisplayAll': __('Leave this field empty to display all lists'),
+
 
     'reinstallConfirmation': __('Are you sure? All of your MailPoet data will be permanently erased (newsletters, statistics, subscribers, etc.).'),
     'announcementHeader': __('Get notified when someone subscribes'),
