Add Unsubscribe page
[MAILPOET-2677]

--- a/views/settings.html
+++ b/views/settings.html
@@ -58,6 +58,9 @@
     'subscribersCanChooseFrom': __('Subscribers can choose from these lists:'),
     'leaveEmptyToDisplayAll': __('Leave this field empty to display all lists'),
 
+    'unsubscribeTitle': __('Unsubscribe page'),
+    'unsubscribeDescription1': __('When your subscribers click the "Unsubscribe" link, they will be directed to this page.'),
+    'unsubscribeDescription2': __('If you want to use a custom Unsubscribe page, simply paste this shortcode on to a WordPress page: [mailpoet_manage text="Manage your subscription"]'),
 
     'reinstallConfirmation': __('Are you sure? All of your MailPoet data will be permanently erased (newsletters, statistics, subscribers, etc.).'),
     'announcementHeader': __('Get notified when someone subscribes'),
