Add new subscriber notifications
[MAILPOET-2677]

--- a/views/settings.html
+++ b/views/settings.html
@@ -71,6 +71,11 @@
     'welcomeAndWcEmails': _x('Welcome Emails and WooCommerce emails', 'Please reuse the current translations of “Welcome Emails”'),
     'pleaseFillEmail': __('Please fill the email address.'),
 
+    'newSubscriberNotifsTitle': __('New subscriber notifications'),
+    'newSubscriberNotifsDescription': __('Enter the email address that should receive notifications when someone subscribes.'),
+    'yes': __('Yes'),
+    'no': __('No'),
+
     'reinstallConfirmation': __('Are you sure? All of your MailPoet data will be permanently erased (newsletters, statistics, subscribers, etc.).'),
     'announcementHeader': __('Get notified when someone subscribes'),
     'announcementParagraph1': __('It’s been a popular feature request from our users, we hope you get lots of emails about all your new subscribers!'),
