--- a/views/settings.html
+++ b/views/settings.html
@@ -76,6 +76,11 @@
     'yes': __('Yes'),
     'no': __('No'),
 
+    'archiveShortcodeTitle': __('Archive page shortcode'),
+    'archiveShortcodeDescription': __('Paste this shortcode on a page to display a list of past newsletters.'),
+    'subscribersCountShortcodeTitle': __('Shortcode to display total number of subscribers'),
+    'subscribersCountShortcodeDescription': __('Paste this shortcode on a post or page to display the total number of confirmed subscribers.'),
+
     'reinstallConfirmation': __('Are you sure? All of your MailPoet data will be permanently erased (newsletters, statistics, subscribers, etc.).'),
     'announcementHeader': __('Get notified when someone subscribes'),
     'announcementParagraph1': __('It’s been a popular feature request from our users, we hope you get lots of emails about all your new subscribers!'),
