--- a/views/settings.html
+++ b/views/settings.html
@@ -81,6 +81,10 @@
     'subscribersCountShortcodeTitle': __('Shortcode to display total number of subscribers'),
     'subscribersCountShortcodeDescription': __('Paste this shortcode on a post or page to display the total number of confirmed subscribers.'),
 
+    'gdprTitle': __('Be GDPR compliant'),
+    'gdprDescription': __('You need to comply with European law in regards to data privacy if you have European subscribers. Rest assured, it’s easy!'),
+    'readGuide': __('Read our guide'),
+
     'reinstallConfirmation': __('Are you sure? All of your MailPoet data will be permanently erased (newsletters, statistics, subscribers, etc.).'),
     'announcementHeader': __('Get notified when someone subscribes'),
     'announcementParagraph1': __('It’s been a popular feature request from our users, we hope you get lots of emails about all your new subscribers!'),
