--- a/assets/css/src/mailpoet-public.scss
+++ b/assets/css/src/mailpoet-public.scss
@@ -3,5 +3,7 @@
 @import 'mixins/breakpoints';
 @import 'mixins/clearfix';
 
+// Components
+// Actual UI components.
 @import 'components/parsley';
 @import 'components-public/public';
