--- a/assets/css/src/settings/_colors.scss
+++ b/assets/css/src/settings/_colors.scss
@@ -1,4 +1,5 @@
 // General colors
+$color-placeholder-select2: #999; /* default Select2 placeholder color for single dropdown */
 $color-transparent: rgba(#fff, 0);
 $color-white: rgb(255, 255, 255);
 
