Set auto height for textarea in forms
[MAILPOET-2599]

--- a/assets/css/src/components/_public.scss
+++ b/assets/css/src/components/_public.scss
@@ -9,6 +9,10 @@
   display: block;
 }
 
+.mailpoet_textarea {
+  height: auto;
+}
+
 /* form loading */
 .mailpoet_form_sending {
   .mailpoet_form_loading {
