--- a/views/form/editor.html
+++ b/views/form/editor.html
@@ -52,6 +52,7 @@
   'customCss': _x('Custom CSS', 'A settings section heading'),
   'formSaved': __('Form saved.'),
   'customFieldSaved': __('Custom field saved.'),
+  'placeFormBellowPages': _x('Below pages', 'This is a text on a widget that leads to settings for form placement'),
   'placeFormBellowAllPages': _x('Below all pages', 'This is a text on a switch if a form should be displayed bellow all pages'),
   'placeFormBellowAllPosts': _x('Below all posts', 'This is a text on a switch if a form should be displayed bellow all posts'),
   'addFormWidgetHint': __('Add this form to a [link]widget area[/link].'),
